deploy/kubernetes/00-services-external.yaml
# Services used externally
---
apiVersion: v1
kind: Service
metadata:
  name: go-novncauthproxy
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: go-novncauthproxy
